1.0: Feature complete
Versioning working, display finalised, docker compatible, read me file. A lot of fonctionalities checked. Should be useable for real.